# advent_of_code_2020

./: Cargo.toml  README.md
input/2020/test/: day19_test_001.txt
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_21.rs  day_22.rs  lib.rs
src/utils/: mod.rs
src/utils/machines/: conwaycube.rs  conwaycube3d.rs  conwaycube4d.rs  handheldconsole.rs  mod.rs
src/utils/map/: cardinaldirection.rs  mod.rs  point2d.rs  point3d.rs  point4d.rs
src/utils/math/: mod.rs
src/utils/math/ntheory/: mod.rs
