[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Connor Mooney-Collett <connor.mooneycollett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.4.2"
enum-iterator = "0.6.0"
